fix nav overflow

--- a/themes/qgrid/source/css/media.scss
+++ b/themes/qgrid/source/css/media.scss
@@ -84,6 +84,9 @@
 			display: none;
 			padding-top: 0;
 			z-index: 12;
+			nav {
+				height: calc(100% - 95px);
+			}
 			.logo {
 				display: none;
 			}
